--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,20 @@
           </div>
         </div>
       </div>
+      <div class="row" id="hemisphere_urls">
+        <h2 class="text-center"> Mars Hemisphere
+        </h2>
+        {% for hemisphere in mars.hemispheres %}
+        <div class="col-md-6">
+          <div class="thumbnail">
+            <img src="{{hemisphere.image_url | default('static/images/error.png', true)}}" alt="...">
+            <h3 class= 'caption'>
+              {{ hemisphere.title | safe }}
+            </h3>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
     </div>
   </body>
 </html>
