--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       <div class="jumbotron text-center">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-success btn-lg text-uppercase" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
@@ -42,26 +42,28 @@
         </div>
         <div class="col-md-4">
           <!-- Mars Facts -->
-          <div class="row" id="mars-facts">
+          <div class="row text-success rounded-top bg-warning" id="mars-facts
             <h4>Mars Facts</h4>
             {{ mars.facts | safe }}
           </div>
         </div>
       </div>
-      <div class="row" id="hemisphere_urls">
-        <h2 class="text-center"> Mars Hemisphere
-        </h2>
+      <div class="row" id="mars-hemispheres">
+        <div class="page-header">
+          <h2 class="text-center">Mars Hemispheres</h2>
+        </div>
         {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
+        <div class="col-md-3">
           <div class="thumbnail">
-            <img src="{{hemisphere.image_url | default('static/images/error.png', true)}}" alt="...">
-            <h3 class= 'caption'>
-              {{ hemisphere.title | safe }}
-            </h3>
+            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...", class="img-thumbnail">
+            <div class="caption rounded-top">
+              <h3>{{hemisphere.title}}</h3>
+            </div>
           </div>
         </div>
         {% endfor %}
       </div>
     </div>
   </body>
-</html>
+  </html>
+  
